# inferroute

./: README.md  pyproject.toml
docs/: RELEASING.md  cowork.md  recorder-redesign-2026-06.md
inferroute_cli/: add.py  catalog.py  catalog_bundled.json  cc_hook.py  choose.py  cowork.py  data.py  gate.py  help.py  integrate.py  launch.py  login.py  logout.py  main.py  models.py  remove.py  setup.py  verify.py
inferroute_local/: SCRUBBER.md  __init__.py  anchor_verify.py  bootstrap.py  classifier.py  classifier_v2.py  cli.py  compactor.py  compression.py  config.py  credentials.py  decision_log.py  hash_v2.py  ingest.py  pricing.py  proxy.py  recorder.py  router.py  server.py  stats.py  wire.py
scripts/: gen_hash_vectors.py  gen_hash_vectors_v2.py
tests/: test_anchor_verify.py  test_hash_v2.py  test_ingest_cost_hook.py  test_launch.py  test_model_naming.py  test_recorder_cost.py  test_recorder_scrub_on_write.py  test_visibility.py
tests/fixtures/: anchor_vectors.json  hash_vectors_v1.json  hash_vectors_v2.json
