[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferroute"
version = "0.1.0"
description = "Launch Claude Code through inferroute — typed less, routed smarter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Henry Declety", email = "henry@inferroute.ai" }]
keywords = ["claude", "claude-code", "llm", "ai", "router", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "textual>=0.78,<2.0",
    "httpx>=0.27,<1.0",
]

# Optional on-device routing. Adds a local HTTP daemon that intercepts CC
# requests on localhost:5005, classifies each turn with a small ONNX model,
# and routes between Anthropic-direct and the inferroute server-side MiniMax
# leg. Without this extra, `ir` stays a tiny launcher that points CC at
# api.inferroute.ai (the original "ir" experience).
#
# Installed by `ir add local-routing`. See docs/local-routing.md.
[project.optional-dependencies]
local = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "click>=8.1",
    # ONNX runtime + tokenizers (the Rust crate, NOT transformers — we don't
    # need anything from transformers for inference and pulling it in risks
    # transitively dragging torch onto user machines).
    "onnxruntime>=1.20",
    "tokenizers>=0.20",
]

[project.scripts]
ir = "inferroute_cli.main:main"
# Internal entry point used by the systemd user unit installed via
# `ir add local-routing`. Not surfaced in `ir help`; power users and
# debugging only.
inferroute-daemon = "inferroute_local.cli:main"

[project.urls]
Homepage = "https://inferroute.ai"
Source = "https://github.com/InferRoute/inferroute-cli"
Issues = "https://github.com/InferRoute/inferroute-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["inferroute_cli", "inferroute_local"]
